# dry-bones

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
sciter/css/: about.css  main.css
sciter/html/: about.html  main.html  tray-menu.html
sciter/js/: about.js  main.js
src/: main.rs
