[package]
name = "dry-bones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "0.5.58"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "dry-bones.exe"
LegalCopyright = "Copyright © Girkov Arpa 2022"
FileDescription = "Dry Bones: Minimalist text editor."
ProductName = "Dry Bones"
ProductVersion = "0.1.0"